# Junior-SofwareEngineer-Notes

./: .gitignore  README.md
code/CMake/CMake101/: CMakeLists.txt  main.cpp
code/CMake/CMake102/: CMakeLists.txt  main.cpp  math.cpp  math.h
code/algorithm/percolation/: Percolation.java
code/algorithm/queues/: Deque.java
code/cpp/attributes/: nodiscard.cpp
code/cpp/c_style_array/: array_and_pointer.cpp  array_parameter_as_pointers_examples.cpp  cannot_directly_copy_array.cpp  identify_array_parameter_is_pointer.cpp  parameter_declared_array_pointer_are_the_same.cpp  size_at_compile_time.cpp  three_ways_copy_array.cpp
code/cpp/callback/: callback_by_function_pointer.cpp
code/cpp/constexpr/: constexpr_must_constant_expression.cpp
code/cpp/copy_elision/: RVO.cpp
code/cpp/destructor/: destructor_virtual.cpp
code/cpp/essential_operations_ctor_dtor_operator/: class_layout_default_copy_move_ctor.cpp  order_execution_all_ctor_dtor_operator.cpp
code/cpp/function_object/: simple_function_object.cpp
code/cpp/function_pointer/: basic_function_pointer.cpp
code/cpp/lambda/: captureClause_is_param_of_functionObject.cpp  capture_const_reference.cpp  capture_is_when_lambda_created.cpp  generic_lambda.cpp  generic_lambda_vs_generic_function.cpp  lambda_is_a_wrapper_of_function_object.cpp  lambda_n_lexicographical.cpp  mutable.cpp
code/cpp/mutable/: mutable1.cpp  mutable2.cpp
code/cpp/noexcept/: basic_noexcept.cpp  stack_unwinding.cpp
code/cpp/numeric/: floating_point_lost_precision.cpp  integer_overflow.cpp
img/: 三大机器人品牌6轴法兰方向可视化.gh
(+35 files in other folders)
